CSS: Fix cropped overdue time

--- a/public/css/lists.less
+++ b/public/css/lists.less
@@ -107,7 +107,6 @@
 .minimal .list-item {
   header {
     max-width: 100%;
-    overflow: hidden;
   }
 
   .visual {
